v0.2.9/_sources/graphtage.pydiff.rst.txt
graphtage.pydiff
================

.. automodule:: graphtage.pydiff

pydiff classes
--------------

PyDictFormatter
***************

.. autoclass:: PyDictFormatter
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyDiffFormatter
***************

.. autoclass:: PyDiffFormatter
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyListFormatter
***************

.. autoclass:: PyListFormatter
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObj
*****

.. autoclass:: PyObj
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObjAttribute
**************

.. autoclass:: PyObjAttribute
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObjAttributes
***************

.. autoclass:: PyObjAttributes
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObjEdit
*********

.. autoclass:: PyObjEdit
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObjFixedAttributes
********************

.. autoclass:: PyObjFixedAttributes
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

PyObjFormatter
**************

.. autoclass:: PyObjFormatter
   :members:
   :undoc-members:
   :inherited-members:
   :show-inheritance:

pydiff functions
----------------

build_tree
**********

.. autofunction:: build_tree

diff
****

.. autofunction:: diff

print_diff
**********

.. autofunction:: print_diff
